--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,9 +1,13 @@
 {
   "compilerOptions": {
+    "module": "Node16",
+    "moduleResolution": "Node16",
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "typeRoots": ["./node_modules/@types", "./types"],
+    "skipLibCheck": true,
   },
   "files": [],
   "references": [
