--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@mantine/core": "^7.12.0",
     "@mantine/hooks": "^7.12.0",
+    "@radix-ui/react-icons": "^1.3.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.2",
     "@typescript-eslint/eslint-plugin": "^8.0.1",
     "@vercel/analytics": "^1.3.1",
     "axios": "^1.7.3",
